public/main.css
body {
    font-family: sans-serif;
    color: black;
}

body, form, table caption {
    background: #eee;
}

a {
    color: #005;
}

a:visited {
    color: #505;
}

main, form, table {
    max-width: 51rem;
    margin: auto;
    padding: 0;
}

main, fieldset, legend, table {
    background: white;
}

h1, h2 {
    padding: 0.5rem;
    margin: 0;
}

h1 img {
    float: right;
    margin: -2px 1px 0 0;
}

fieldset, p {
    padding: 0.1rem 0.5rem;
    margin: 0 0 0.5rem;
}

fieldset, legend {
    border: 1px solid #7f7f7f;
    border-radius: 0.3rem;
}

legend {
    border-bottom: none;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
    padding: 0.25rem 0.5rem;
}

button, label, input, select {
    margin: 0.5rem 0;
}

button, input, select {
    background-color: white;
    color: black;
    border: 2px solid #7f7f7f;
    border-radius: 0.3rem;
    font-size: 1rem;
}

select, form #coords-link {
    margin-right: 0.75rem;
}

[type=reset] {
    float: right;
}

table {
    display: block;
    border-collapse: collapse;
    max-width: fit-content;
    overflow-x: scroll;
}

table caption {
    font-weight: bold;
    padding: 0.25rem;
    text-align: left;
    white-space: nowrap;
}

thead th {
    background-color: white;
    position: sticky;
    text-align: left;
    top: 0;
    z-index: 10;
}

th, td {
    border: 1px solid #7f7f7f;
    padding: 0.5rem;
    vertical-align: top;
}

td ul {
    margin: 0;
    padding-left: 1rem;
}

td.num {
    text-align: right;
}

tr:hover {
    background-color: #ececec;
}

#not-found main {
    max-width: 26rem;
}

#not-found h1 {
    text-align: center;
}

#not-found img {
    position: fixed;
    top: 50%;
    left: 50%;
    margin-top: -350px;
    margin-left: -700px;
    z-index: -1;
}

.fine-print {
    font-size: 80%;
}

.nobr {
    white-space: nowrap;
}

@media only screen and (prefers-color-scheme: dark) {
    body, form, table caption {
        background-color: #111;
        color: white;
    }

    a {
        color: #aaf;
    }

    a:visited {
        color: #faf;
    }

    main, fieldset, button, input, select, table, thead th {
        background-color: black;
        color: white;
    }

    tr:hover {
        background-color: #131313;
    }
}

